--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2348,7 +2348,7 @@ input, select, textarea {
 		top: 0;
 		left: 0;
 		z-index: 1000;
-		background-color: rgba(255, 255, 255, 0.95);
+		background-color: rgb(255, 255, 255);
 		background-image: url("images/overlay.png");
 		width: 100%;
 		height: 3.25em;
